feat: add distance formula to description

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,18 +29,21 @@ submission.invalid.chars=Your answer contains characters other than letters and 
 submission.invalid.labels=Unknown label(s): {0}
 
 #Description Knn
-task.knn.description=Assign the following {0} test points (green) to the correct class using the KNN classifier (k={1}, distance: {2}). \
-The feature range is x={3}..{4}, y={5}..{6}. \
-Note: If multiple training points have the same distance as the k-th nearest neighbor, all of them are considered neighbors (so there may be more than k neighbors).
-task.knn.tiebreaker.sum.description=In case of a tie, the class with the smallest total distance is chosen; if still tied, alphabetical order is used (tie-breaker: {0}).
-task.knn.tiebreaker.mean.description=In case of a tie, the class with the smallest mean distance is chosen; if still tied, alphabetical order is used (tie-breaker: {0}).
-task.knn.tiebreaker.nearest.description=In case of a tie, the class with the closest single neighbor is chosen; if still tied, alphabetical order is used (tie-breaker: {0}).
-task.knn.visualisation=Exercise visualisation:
-task.knn.testpoints.table.title=Points to classify
+task.knn.description=Assign the following {0} test points (green diamonds) to the appropriate class using the KNN classifier (k={1}, distance-metric: {2}).<br>\
+The feature domain is:<ul><li>{3} = {4} – {5}</li><li>{6} = {7} – {8}</li></ul>\
+If multiple training points have the same distance as the k nearest neighbors, all these points are considered neighbors (so there may be more than k neighbors). <br>
+task.knn.metric.formula.manhattan=The Manhattan distance can be calculated as follows: d(x, y) = |x₁ - y₁| + |x₂ - y₂|
+task.knn.metric.formula.euclidean=The Euclidean distance can be calculated as follows: d(x, y) = √((x₁ - y₁)² + (x₂ - y₂)²)
+task.knn.metric.formula.minkowski=The Minkowski distance with p=3 can be calculated as follows : d(x, y) = (|x₁ - y₁|³ + |x₂ - y₂|³)^(1/3) <br>
+task.knn.tiebreaker.sum.description=In case of a tie, the smallest total distance per class decides first, then the alphabetical order of the class name (tie-break method: {0}).
+task.knn.tiebreaker.mean.description=In case of a tie, the smallest average distance per class decides first, then the alphabetical order of the class name (tie-break method: {0}).
+task.knn.tiebreaker.nearest.description=In case of a tie, the neighbor with the smallest distance decides, then the alphabetical order of the class name (tie-break method: {0}).
+task.knn.visualisation=Task visualisation:
+task.knn.testpoints.table.title=Points to be classified
 task.knn.testpoints.table.points=Point {0}
-task.knn.submission.hint=Each correctly classified point awards {0} points, each misclassified point deducts {1} points.<br>\
-Answers must be given in the same order as the test points (first entry → point 1, second entry → point 2, ...).<br>\
-If you want to abstain from classifying a Points, just leave the corresponding position empty as shown in the example with abstention below.<br>\
+task.knn.submission.hint=You receive {0} points for each correctly classified point and lose {1} points for each incorrect classification.<br>\
+Enter the classes in the same order as the test points (first entry → point 1, second entry → point 2, etc.).<br>\
+If you do not want to classify a point, leave the respective field empty as shown in the following example (3 test points, abstention):<br>\
 <b>Submission format:</b><br>\
 A, B, A <br>\
 Example with abstention:<br>\
