fix: correct error when updating trainlabels, correcting behaviour when updating x- or y-axis range

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ knn.class=Class
 knn.distance=Distance
 knn.votes.per.class=Votes per class:
 knn.tie.break.reason=Decision reason:
-knn.majority=No tie-break needed – clear majority
+knn.majority=No tiebreaker needed – clear majority
 knn.sumDistance=Tie resolved by minimal total distance
 knn.meanDistance=Tie resolved by minimal mean distance
 knn.nearestNeighbor=Tie resolved by nearest neighbor
@@ -25,21 +25,21 @@ knn.alphabetical=Tie resolved by alphabetical order
 #submission Knn
 submission.solution.visualisation=Solution visualisation:
 submission.length.mismatch=Input length does not match the expected solution length ({0} expected, {1} provided).
-submission.invalid.chars=Your answer contains characters other than letters and commas.
+submission.invalid.chars=Your answer contains characters other than letters, spaces and commas.
 submission.invalid.labels=Unknown label(s): {0}
 
 #Description Knn
 task.knn.description=Assign the following {0} test points (green diamonds) to the appropriate class using the KNN classifier (k={1}, distance-metric: {2}).<br>\
 The feature domain is:<ul><li>{3} = {4} – {5}</li><li>{6} = {7} – {8}</li></ul>\
 If multiple training points have the same distance as the k nearest neighbors, all these points are considered neighbors (so there may be more than k neighbors). <br>
-task.knn.metric.formula.manhattan=The Manhattan distance can be calculated as follows: d(x, y) = |x₁ - y₁| + |x₂ - y₂|
-task.knn.metric.formula.euclidean=The Euclidean distance can be calculated as follows: d(x, y) = √((x₁ - y₁)² + (x₂ - y₂)²)
-task.knn.metric.formula.minkowski=The Minkowski distance with p=3 can be calculated as follows : d(x, y) = (|x₁ - y₁|³ + |x₂ - y₂|³)^(1/3) <br>
-task.knn.tiebreaker.sum.description=In case of a tie, the smallest total distance per class decides first, then the alphabetical order of the class name (tie-break method: {0}).
-task.knn.tiebreaker.mean.description=In case of a tie, the smallest average distance per class decides first, then the alphabetical order of the class name (tie-break method: {0}).
-task.knn.tiebreaker.nearest.description=In case of a tie, the neighbor with the smallest distance decides, then the alphabetical order of the class name (tie-break method: {0}).
+task.knn.metric.formula.manhattan=The Manhattan distance can be calculated as follows:<br>d(x, y) = |x₁ - y₁| + |x₂ - y₂|
+task.knn.metric.formula.euclidean=The Euclidean distance can be calculated as follows:<br>d(x, y) = √((x₁ - y₁)² + (x₂ - y₂)²)
+task.knn.metric.formula.minkowski=The Minkowski distance with p=3 can be calculated as follows:<br>d(x, y) = (|x₁ - y₁|³ + |x₂ - y₂|³)^(1/3) <br>
+task.knn.tiebreaker.sum.description=In case of a tie, the smallest total distance per class decides first, then the alphabetical order of the class name (tiebreak method: {0}).
+task.knn.tiebreaker.mean.description=In case of a tie, the smallest average distance per class decides first, then the alphabetical order of the class name (tiebreak method: {0}).
+task.knn.tiebreaker.nearest.description=In case of a tie, the neighbor with the smallest distance decides, then the alphabetical order of the class name (tiebreak method: {0}).
 task.knn.visualisation=Task visualisation:
-task.knn.testpoints.table.title=Points to be classified
+task.knn.testpoints.table.title=Points to be classified:
 task.knn.testpoints.table.points=Point {0}
 task.knn.submission.hint=You receive {0} points for each correctly classified point and lose {1} points for each incorrect classification.<br>\
 Enter the classes in the same order as the test points (first entry → point 1, second entry → point 2, etc.).<br>\
